--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,3 +1,4 @@
+<!--
 <?php
 require(__DIR__ . '/forms/db_connection.php');
 $env = parse_ini_file('.env');
@@ -33,7 +34,7 @@ if (isset($_COOKIE['user_id'])) {
 } else {
   $_SESSION['last_activity'] = time();
 }
-?>
+?>-->
 
 <!DOCTYPE html>
 
@@ -43,14 +44,14 @@ if (isset($_COOKIE['user_id'])) {
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">  
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/<?= $env['app_dir'] ?>/static/custom.css">
+    <link rel="stylesheet" href="../static/custom.css">
     <!-- PYTHON: <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='custom.css')}}" /> -->
     
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script> 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="/<?= $env['app_dir'] ?>/js/date.js"></script> 
+    <script src="/js/date.js"></script> 
     <link rel="icon" type="image/x-icon" href="/<?= $env['app_dir'] ?>/favicon.ico">
     
   </head>
@@ -61,8 +62,8 @@ if (isset($_COOKIE['user_id'])) {
     
       <nav class="navbar navbar-expand-md fixed-top navbar-dark custom-navbar-color"> 
         <div id="logo">
-        <h1><a href="/<?= $env['app_dir'] ?>/index.html"><span>KUNTOKLUBI ENERGIA</span></a></h1>
-        <!-- PYTHON: <h1><a href="{{ url_for('index') }}"><span>KUNTOKLUBI ENERGIA</span></a></h1> -->     
+      <!--PYTHON:   <h1><a href="/<?= $env['app_dir'] ?>/index.html"><span>HIUSMAGIA</span></a></h1>-->
+         <h1><a href="{{ url_for('index') }}"><span>HIUSMAGIA</span></a></h1>      
         </div>
       
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -71,16 +72,15 @@ if (isset($_COOKIE['user_id'])) {
 
         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
           <div class="navbar-nav">          
-            <a <?php if ($address == "company") echo $active; ?> 
-              href="/<?= $env['app_dir'] ?>/company/company.php" 
+            <a href="{{ url_for('company') }}" 
               class="nav-item nav-link">MEISTÄ
             </a>
-            <a <?php if ($address == "trainers") echo $active; ?>
-              href="/<?= $env['app_dir'] ?>/trainers/trainers.php" 
+            <a 
+              href="{{ url_for('trainers') }}" 
               class="nav-item nav-link">OHJAAJAT
             </a>
-            <a <?php if ($address == "feedback") echo $active; ?>
-              href="/<?= $env['app_dir'] ?>/contacts/feedback.php" 
+            <a 
+              href="{{ url_for('feedback') }}" 
               class="nav-item nav-link">OTA YHTEYTTÄ
             </a>
           </div>
@@ -124,10 +124,10 @@ if (isset($_COOKIE['user_id'])) {
             <?php
             } else {
             ?>
-              <a <?php if ($address == "registration") echo $active; ?>
-                  href="/<?= $env['app_dir'] ?>/forms/registration.php" 
+             <!-- <a 
+                  href=""
                   class="nav-item nav-link">Luo tili
-              </a>
+              </a>-->
               <a <?php if ($address == "login") echo $active; ?> 
                   href="/<?= $env['app_dir'] ?>/forms/login.php" 
                   class="nav-item nav-link"><i class="bi bi-person-circle" style="font-size:18px;"></i>
@@ -142,7 +142,7 @@ if (isset($_COOKIE['user_id'])) {
       <!-- CONTENT STARTS -->
 
       <div class="container-fluid custom-margin-container">
-        {% block content %}
+        {% block page_content %}
         {% endblock %}
         <div class="custom-space">
           <p></p>
