--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,12 +1,135 @@
 {% extends "layout.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
-
-{% block title %}HIUSMAGIA{% endblock %}
-
-{% block page_content %}
-<div class="page-header">
-    
-</div>
-
-{{ wtf.quick_form(form) }}
+{% block title %}
+HIUSMAGIA parturi kampaamo
 {% endblock %}
+{% block page_content %}
+    <div class="custom-adds">
+        <div class="row">
+        <div class="col-xl-8">
+            <h2 style="color:#336699;"><b>KUNTOKLUBIN ENERGIA</b> KUUKAUDEN HUIPPUTARJOUKSIA!</h2>
+            <p></p>
+            <p>
+                <span class="custom-txt-strong" style="text-transform:uppercase;">Osta nyt kuukauden kausikortti ja saa ilmaiseksi 1 tunti personal trainerin kanssa!</span><br>
+                Etu on tarkoitettu uusille asiakkaille. Sopimus jatkuu tämän jälkeen toistaiseksi voimassa olevana. Tarjous voimassa rajoitetun ajan. 
+                
+                Meidän tilava harjoitteluympäristö antaa sinulle mahdollisuuden monipuoliseen liikunnan harrastamiseen. 
+                <span class="custom-txt-strong" style="text-transform:uppercase;">Hanki kausikortti kätevästi netistä ja tule tutustumaan!</span> 
+            </p>       
+        </div> 
+
+        <div class="col-xl-4">
+            <div class="custom-div-adds"><span class="custom-span-adds">UUSILLE ASIAKKAILLE<br></span><h1>1 ILMAINEN TUNTI</h1><span class="custom-span-adds-red">PERSONAL TRAINERIN<br></span><span class="custom-span-adds">KANSSA <i class="bi bi-tag-fill"></i></span>
+            </div>
+        </div> 
+        </div>     
+    </div>      
+
+    <!--Row starts-->
+    <div class="row">
+        <div class="col-xl-6">
+            <div class="row">
+                <div class="col-xl-7 custom-cart-title-l" ><div class="custom-cart-title-wrap">Pilates</div></div>
+                <div class="col-xl-5 custom-cart-title-r" ><a href="" class="custom-cart">OSTAA</a></div>
+            </div>  
+            <div class="custom-container"><img class="custom-product" src="pics/pilates.jpeg" alt=""> 
+                    <div class="custom-top-right"><h3>60€/kk</h3></div> 
+                                            
+                    <div class="custom-overlay">                   
+                        <div class="custom-image-text">
+                        Pilates on kehonhallintatekniikka, 
+                        joka vahvistaa keskivartalon syviä lihaksia, 
+                        syventää hengitystä ja opettaa liikkumaan fysiologisesti oikein.                
+                        </div>                    
+                    </div>                
+            </div>                    
+        </div>
+        <div class="col-xl-6">
+            <div class="row">
+                <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Jooga</div></div>
+                <div class="col-xl-5 custom-cart-title-r"><a href="" class="custom-cart">OSTAA</a></div>
+            </div>  
+            <div class="custom-container"><img class="custom-product" src="pics/jooga.jpeg" alt=""> 
+                    <div class="custom-top-right"><h3>30€/kk</h3></div>
+                    <div class="custom-overlay">
+                        <div class="custom-image-text">
+                        Joogaan kuuluu asentoharjoituksia ja meditaatiota, 
+                        ja sen harjoittaminen on monille kehollista terapiaa ja rentoutumista.               
+                        </div>
+                    </div>
+            </div>                    
+        </div>  
+    </div>
+    <!--Row ends-->
+
+    <!--Row starts-->
+    <div class="row">
+        <div class="col-xl-6">
+            <div class="row">
+                <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Personal trainer</div></div>
+                <div class="col-xl-5 custom-cart-title-r"><a href="" class="custom-cart">OSTAA</a></div>
+            </div>  
+            <div class="custom-container"><img class="custom-product" src="pics/ohjaaja.jpg" alt="">
+                    <div class="custom-top-right"><h3>30€/t</h3></div> 
+                    <div class="custom-overlay">
+                        <div class="custom-image-text">
+                        Kun haluat suunnitelmallista ja yksilöllistä ohjausta, ammattitaitoinen ja 
+                        motivoiva personal trainer auttaa sinut saavuttaa tavoitteesi.                                                             
+                        </div>
+                    </div>
+            </div>                    
+        </div>
+        <div class="col-xl-6">
+            <div class="row">
+                <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Hieronta</div></div>
+                <div class="col-xl-5 custom-cart-title-r"><a href="" class="custom-cart">OSTAA</a></div>
+            </div>  
+            <div class="custom-container"><img class="custom-product" src="pics/hieronta.jpeg" alt=""> 
+                    <div class="custom-top-right"><h3>25€/t</h3></div>
+                    <div class="custom-overlay">
+                        <div class="custom-image-text">
+                        Tarjoamme laadukkaita hierontapalveluita. Hieronta tehostaa aineenvaihduntaa 
+                        ja vilkastuttaa verenkiertoa iästä riippumatta.               
+                        </div>
+                    </div>
+            </div>                    
+        </div>  
+    </div>
+    <!--Row ends-->
+
+    <!--Row starts-->
+    <div class="row">
+        <div class="col-xl-6">
+            <div class="row">
+                <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Zumba</div></div>
+                <div class="col-xl-5 custom-cart-title-r"><a href="" class="custom-cart">OSTAA</a></div>
+            </div>  
+            <div class="custom-container"><img class="custom-product" src="pics/zumba.jpeg" alt="">
+                    <div class="custom-top-right"><h3>60€/kk</h3></div> 
+                    <div class="custom-overlay">
+                        <div class="custom-image-text">
+                        Zumba on aerobicinen fitness-ohjelma, jonka musiikki perustuu pääosin latinalaistansseihin.
+                        Tunti koostuu intervallityyppisestä ohjelmasta.               
+                        </div>
+                    </div>
+            </div>                    
+        </div>
+        <div class="col-xl-6">
+            <div class="row">
+                <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Kausikortti</div></div>
+                <div class="col-xl-5 custom-cart-title-r"><a href="" class="custom-cart">OSTAA</a></div>
+            </div>  
+            <div class="custom-container"><img class="custom-product" src="pics/kausikortti.jpeg" alt="">
+                    <div class="custom-top-right"><h3>90€/kk</h3></div> 
+                    <div class="custom-overlay">
+                        <div class="custom-image-text">
+                        Kausikortilla pääset treenaamaan kaikissa meidän saleissa ja liikuntaryhmissä rajattomasti.
+                        Kortin saat ensimmäisellä käyntikerralla.              
+                        </div>
+                    </div>
+            </div>                    
+        </div>  
+    </div>
+    <!--Row ends-->      
+{% endblock %}
+
+<script type="text/javascript" src="cart/put_product_cart.js"></script>
