delete page_content in temlates

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 {% block title %}
 HIUSMAGIA parturi kampaamo
 {% endblock %}
-{% block page_content %}
+{% block content %}
     <div class="custom-adds">
         <div class="row">
         <div class="col-xl-8">
