--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -135,7 +135,7 @@ if (isset($_COOKIE['user_id'])) {
       <!-- CONTENT STARTS -->
 
       <div class="container-fluid custom-margin-container">
-        {% block page_content %}
+        {% block content %}
         {% endblock %}
         <div class="custom-space">
           <p></p>
