--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -2,7 +2,7 @@
 
 {% block title %}HIUSMAGIA - Page Not Found{% endblock %}
 
-{% block page_content %}
+{% block content %}
 <div class="page-header">
     <h1>Not Found</h1>
 </div>
