--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -3,7 +3,7 @@
 
 {% block title %}HIUSMAGIA - Register{% endblock %}
 
-{% block page_content %}
+{% block content %}
 <div class="page-header">
     <h1>Register</h1>
 </div>
