--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,7 +31,7 @@ HIUSMAGIA parturi kampaamo
                 <div class="col-xl-7 custom-cart-title-l" ><div class="custom-cart-title-wrap">Pilates</div></div>
                 <div class="col-xl-5 custom-cart-title-r" ><a href="" class="custom-cart">OSTAA</a></div>
             </div>  
-            <div class="custom-container"><img class="custom-product" src="pics/pilates.jpeg" alt=""> 
+            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/pilates.jpeg/') }}" alt=""> 
                     <div class="custom-top-right"><h3>60€/kk</h3></div> 
                                             
                     <div class="custom-overlay">                   
@@ -48,7 +48,7 @@ HIUSMAGIA parturi kampaamo
                 <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Jooga</div></div>
                 <div class="col-xl-5 custom-cart-title-r"><a href="" class="custom-cart">OSTAA</a></div>
             </div>  
-            <div class="custom-container"><img class="custom-product" src="pics/jooga.jpeg" alt=""> 
+            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/jooga.jpeg/') }}" alt=""> 
                     <div class="custom-top-right"><h3>30€/kk</h3></div>
                     <div class="custom-overlay">
                         <div class="custom-image-text">
@@ -68,7 +68,7 @@ HIUSMAGIA parturi kampaamo
                 <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Personal trainer</div></div>
                 <div class="col-xl-5 custom-cart-title-r"><a href="" class="custom-cart">OSTAA</a></div>
             </div>  
-            <div class="custom-container"><img class="custom-product" src="pics/ohjaaja.jpg" alt="">
+            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/ohjaaja.jpg/') }}" alt="">
                     <div class="custom-top-right"><h3>30€/t</h3></div> 
                     <div class="custom-overlay">
                         <div class="custom-image-text">
@@ -83,7 +83,7 @@ HIUSMAGIA parturi kampaamo
                 <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Hieronta</div></div>
                 <div class="col-xl-5 custom-cart-title-r"><a href="" class="custom-cart">OSTAA</a></div>
             </div>  
-            <div class="custom-container"><img class="custom-product" src="pics/hieronta.jpeg" alt=""> 
+            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/hieronta.jpeg/') }}" alt=""> 
                     <div class="custom-top-right"><h3>25€/t</h3></div>
                     <div class="custom-overlay">
                         <div class="custom-image-text">
@@ -103,7 +103,7 @@ HIUSMAGIA parturi kampaamo
                 <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Zumba</div></div>
                 <div class="col-xl-5 custom-cart-title-r"><a href="" class="custom-cart">OSTAA</a></div>
             </div>  
-            <div class="custom-container"><img class="custom-product" src="pics/zumba.jpeg" alt="">
+            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/zumba.jpeg/') }}" alt="">
                     <div class="custom-top-right"><h3>60€/kk</h3></div> 
                     <div class="custom-overlay">
                         <div class="custom-image-text">
@@ -118,7 +118,7 @@ HIUSMAGIA parturi kampaamo
                 <div class="col-xl-7 custom-cart-title-l"><div class="custom-cart-title-wrap">Kausikortti</div></div>
                 <div class="col-xl-5 custom-cart-title-r"><a href="" class="custom-cart">OSTAA</a></div>
             </div>  
-            <div class="custom-container"><img class="custom-product" src="pics/kausikortti.jpeg" alt="">
+            <div class="custom-container"><img class="custom-product" src="{{ url_for('static', filename='/pics/kausikortti.jpeg/') }}" alt="">
                     <div class="custom-top-right"><h3>90€/kk</h3></div> 
                     <div class="custom-overlay">
                         <div class="custom-image-text">
