--- a/app/templates/contacts/feedback.html
+++ b/app/templates/contacts/feedback.html
@@ -8,6 +8,7 @@ include("feedback_handler.php");
 ?>
 
 {% block content %}
+<div class="custom-margin-for-form">
     <!--Row starts-->
     <div class="row">
         <div class="col-lg-2">        
@@ -57,5 +58,6 @@ include("feedback_handler.php");
         <div class="col-lg-2">        
         </div>
     </div>
-    <!--Row ends-->  
+    <!--Row ends--> 
+</div> 
 {% endblock %}
