--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,16 +1,13 @@
+<!--
 <?php
 require(__DIR__ . '/forms/db_connection.php');
 $env = parse_ini_file('.env');
-
 $page = $_SERVER['PHP_SELF'];
 $end = substr($page, strrpos($page, "/") + 1);
 $address = substr($end, 0, strpos($end, "."));
-
 $active = "class=\"nav-link active\" ";
 $full = "class=\"custom-cart-full\" ";
-
 session_start();
-
 if (isset($_COOKIE['user_id'])) {
   $user_id = $_COOKIE['user_id'];
   $query = " SELECT * FROM users LEFT JOIN users_tokens ON users.id=users_tokens.user_id  WHERE users.id='$user_id'";
@@ -33,7 +30,7 @@ if (isset($_COOKIE['user_id'])) {
 } else {
   $_SESSION['last_activity'] = time();
 }
-?>
+?>-->
 
 <!DOCTYPE html>
 
@@ -41,28 +38,30 @@ if (isset($_COOKIE['user_id'])) {
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{% block title %}{% endblock %}</title>
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">  
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/<?= $env['app_dir'] ?>/static/custom.css">
-    <!-- PYTHON: <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='custom.css')}}" /> -->
+    <!-- <link rel="stylesheet" href="../static/custom.css"> -->
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='custom.css')}}" />
     
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script> 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="/<?= $env['app_dir'] ?>/js/date.js"></script> 
+    <!-- <script src="/js/date.js"></script> -->
+    <script src="{{ url_for('static', filename='/js/date.js') }}"></script>
     <link rel="icon" type="image/x-icon" href="/<?= $env['app_dir'] ?>/favicon.ico">
     
   </head>
+
 
   <body class="custom-body">
 
       <!-- NAVIGATION STARTS -->
     
       <nav class="navbar navbar-expand-md fixed-top navbar-dark custom-navbar-color"> 
-        <div id="logo">
-        <h1><a href="/<?= $env['app_dir'] ?>/index.html"><span>KUNTOKLUBI ENERGIA</span></a></h1>
-        <!-- PYTHON: <h1><a href="{{ url_for('index') }}"><span>KUNTOKLUBI ENERGIA</span></a></h1> -->     
+        <div id="logo">      
+         <h1><a href="{{ url_for('index') }}"><span>HIUSMAGIA</span></a></h1>      
         </div>
       
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -71,86 +70,87 @@ if (isset($_COOKIE['user_id'])) {
 
         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
           <div class="navbar-nav">          
-            <a <?php if ($address == "company") echo $active; ?> 
-              href="/<?= $env['app_dir'] ?>/company/company.php" 
+            <a href="{{ url_for('company') }}" 
               class="nav-item nav-link">MEISTÄ
             </a>
-            <a <?php if ($address == "trainers") echo $active; ?>
-              href="/<?= $env['app_dir'] ?>/trainers/trainers.php" 
+            <a 
+              href="{{ url_for('trainers') }}" 
               class="nav-item nav-link">OHJAAJAT
             </a>
-            <a <?php if ($address == "feedback") echo $active; ?>
-              href="/<?= $env['app_dir'] ?>/contacts/feedback.php" 
+            <a 
+              href="{{ url_for('feedback') }}" 
               class="nav-item nav-link">OTA YHTEYTTÄ
             </a>
           </div>
             
           <div class="navbar-nav">
-            <?php if ((isset($_SESSION['admin']) && $_SESSION['admin']!=1 && $_SESSION['trainer']!=1) || !isset($_SESSION['admin'])){?>  
-            <a <?php if ($address == "cart") echo $full; ?> 
-              href="/<?= $env['app_dir'] ?>/cart/cart.php" 
+            
+            <a  href="" 
               class="nav-item custom-cart-link"><i class="bi bi-cart"></i>
             </a>
 
-            <?php } 
-            if (isset($_SESSION['admin'])) {          
-                if($_SESSION['admin']==1){?>
+            
 
-            <a <?php if ($address == "admin_page") echo $active; ?> 
-                href="/<?= $env['app_dir'] ?>/admins/admin_page.php" 
+            <a  
+                href="" 
                 class="nav-item nav-link"><i class="bi bi-person-circle" style="font-size:18px; color:lightgreen;"></i>
             </a>
 
-            <?php
-                }elseif($_SESSION['trainer']==1){ ?>
-            <a <?php if ($address == "trainer_page") echo $active; ?> 
-                href="/<?= $env['app_dir'] ?>/trainers/trainer_page.php" 
+            
+            <a 
+                href="" 
                 class="nav-item nav-link"><i class="bi bi-person-circle" style="font-size:18px; color:lightgreen;"></i>
             </a>
-            <?php
-                } else{ ?>
-            <a <?php if ($address == "client_page") echo $active; ?> 
-                href="/<?= $env['app_dir'] ?>/customers/client_page.php" 
+            
+            <a 
+                href="" 
                 class="nav-item nav-link"><i class="bi bi-person-circle" style="font-size:18px; color:lightgreen;"></i>
             </a>
             <?php
               }
             ?>
 
-            <a <?php if ($address == "logout") echo $active; ?> 
-                href="/<?= $env['app_dir'] ?>/forms/logout.php" 
+            <a  
+                href="" 
                 class="nav-item nav-link">Kirjaudu ulos
             </a>
-            <?php
-            } else {
-            ?>
-              <a <?php if ($address == "registration") echo $active; ?>
-                  href="/<?= $env['app_dir'] ?>/forms/registration.php" 
+            
+              <a 
+                  href="{{ url_for('register') }}"
                   class="nav-item nav-link">Luo tili
               </a>
-              <a <?php if ($address == "login") echo $active; ?> 
-                  href="/<?= $env['app_dir'] ?>/forms/login.php" 
+              <a 
+                  href="" 
                   class="nav-item nav-link"><i class="bi bi-person-circle" style="font-size:18px;"></i>
               </a>
-            <?php
-            } ?>
+            <!-- <?php
+            } ?> -->
           </div>
         </div>
       </nav>
       <!-- NAVIGATION ENDS -->
 
       <!-- CONTENT STARTS -->
-
+    
       <div class="container-fluid custom-margin-container">
-        {% block content %}
+        {% block alert_content %}
+          <!-- <div class="container">-->
+          {% for message in get_flashed_messages() %}
+          <div class="alert alert-warning">
+          <button type="button" class="close" data-dismiss="alert">&times;</button>
+          {{ message }}
+          </div>
+          {% endfor %}
+          {% block content %}{% endblock %}
+          <!--</div>-->
         {% endblock %}
         <div class="custom-space">
           <p></p>
         </div>       
       </div>
 
-    <!-- CONTENT ENDS -->
-
+      <!-- CONTENT ENDS -->
+   
     <!-- FOOTER STARTS -->
     <footer class="custom-footer">
       <div class="container-fluid">
