--- a/app/templates/trainers/trainers.html
+++ b/app/templates/trainers/trainers.html
@@ -9,7 +9,7 @@ HIUSMAGIA parturi kampaamo
     <div class="row row-cols-1 row-cols-md-4 g-4">    
         <div class="col custom-margin-bottom">
             <div class="card h-100 custom-card">
-                <img src="../pics/Liv-Tyler.jpg" class="card-img-top" alt="...">
+                <img src="{{ url_for('static', filename='/pics/Liv-Tyler.jpg/') }}" class="card-img-top" alt="..."> 
                 <div class="card-body">
                     <h5 class="card-title">Liv Tyler</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nec lectus risus. A sem a nisl feugiat fringilla et eu eros.</p>
@@ -19,7 +19,7 @@ HIUSMAGIA parturi kampaamo
         </div>
         <div class="col custom-margin-bottom">
             <div class="card h-100 custom-card">
-            <img src="../pics/Jensen-Ackles.jpg" class="card-img-top" alt="...">
+            <img src="{{ url_for('static', filename='/pics/Jensen-Ackles.jpg/') }}" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Jensen Ackles</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nec lectus risus. A sem a nisl feugiat fringilla et eu eros.</p>
@@ -29,7 +29,7 @@ HIUSMAGIA parturi kampaamo
         </div>
         <div class="col custom-margin-bottom">
             <div class="card h-100 custom-card">
-            <img src="../pics/Carmen-Electra.jpg" class="card-img-top" alt="...">
+            <img src="{{ url_for('static', filename='/pics/Carmen-Electra.jpg/') }}" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Carmen Electra</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nec lectus risus. A sem a nisl feugiat fringilla et eu eros.</p>
@@ -39,7 +39,7 @@ HIUSMAGIA parturi kampaamo
         </div>
         <div class="col custom-margin-bottom">
             <div class="card h-100 custom-card">
-            <img src="../pics/Jared-Padalecki.jpeg" class="card-img-top" alt="...">
+            <img src="{{ url_for('static', filename='/pics/Jared-Padalecki.jpeg/') }}" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Jared Padalecki</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nec lectus risus. A sem a nisl feugiat fringilla et eu eros.</p>
@@ -54,7 +54,7 @@ HIUSMAGIA parturi kampaamo
     <div class="row row-cols-1 row-cols-md-4 g-4">
         <div class="col custom-margin-bottom">
             <div class="card h-100 custom-card">
-            <img src="../pics/Kit-Harington.jpg" class="card-img-top" alt="...">
+            <img src="{{ url_for('static', filename='/pics/Kit-Harington.jpg/') }}" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Kit Harington</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nec lectus risus. A sem a nisl feugiat fringilla et eu eros.</p>
@@ -64,7 +64,7 @@ HIUSMAGIA parturi kampaamo
         </div>
         <div class="col custom-margin-bottom">
             <div class="card h-100 custom-card">
-            <img src="../pics/Lucy-Liu.jpg" class="card-img-top" alt="...">
+            <img src="{{ url_for('static', filename='/pics/Lucy-Liu.jpg/') }}" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Lucy Liu</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nec lectus risus. A sem a nisl feugiat fringilla et eu eros.</p>
@@ -74,7 +74,7 @@ HIUSMAGIA parturi kampaamo
         </div>
         <div class="col custom-margin-bottom">
             <div class="card h-100 custom-card">
-            <img src="../pics/Eva-Longoria.jpg" class="card-img-top" alt="...">
+            <img src="{{ url_for('static', filename='/pics/Eva-Longoria.jpg/') }}" class="card-img-top" alt="..."> 
             <div class="card-body">
                 <h5 class="card-title">Eva Longoria</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nec lectus risus. A sem a nisl feugiat fringilla et eu eros.</p>
@@ -84,7 +84,7 @@ HIUSMAGIA parturi kampaamo
         </div>
         <div class="col custom-margin-bottom">
             <div class="card h-100 custom-card">
-            <img src="../pics/Nikolaj-Coster-Waldau.jpg" class="card-img-top" alt="...">
+            <img src="{{ url_for('static', filename='/pics/Nikolaj-Coster-Waldau.jpg/') }}" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Nikolaj Coster-Waldau</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nec lectus risus. A sem a nisl feugiat fringilla et eu eros.</p>
