--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -115,7 +115,7 @@ if (isset($_COOKIE['user_id'])) {
             ?>
 
             <a  
-                href="" 
+                href="{{ url_for('auth.logout') }}" 
                 class="nav-item nav-link">Kirjaudu ulos
             </a>
             
