--- a/app/templates/trainers/trainers.html
+++ b/app/templates/trainers/trainers.html
@@ -13,7 +13,7 @@ HIUSMAGIA parturi kampaamo
                 <div class="card-body">
                     <h5 class="card-title">Liv Tyler</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nec lectus risus. A sem a nisl feugiat fringilla et eu eros.</p>
-                    <a href="../customers/reservation.php" class="btn btn-block btn-sm custom-outline-button">VARAA AIKA</a>
+                    <a href="../customers/reservation.html" class="btn btn-block btn-sm custom-outline-button">VARAA AIKA</a>
                 </div>
             </div>
         </div>
@@ -23,7 +23,7 @@ HIUSMAGIA parturi kampaamo
             <div class="card-body">
                 <h5 class="card-title">Jensen Ackles</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nec lectus risus. A sem a nisl feugiat fringilla et eu eros.</p>
-                <a href="../forms/login.php" class="btn btn-block btn-sm custom-outline-button">VARAA AIKA</a>
+                <a href="../customers/reservation.html" class="btn btn-block btn-sm custom-outline-button">VARAA AIKA</a>
             </div>
             </div>
         </div>
@@ -33,7 +33,7 @@ HIUSMAGIA parturi kampaamo
             <div class="card-body">
                 <h5 class="card-title">Carmen Electra</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nec lectus risus. A sem a nisl feugiat fringilla et eu eros.</p>
-                <a href="../forms/login.php" class="btn btn-block btn-sm custom-outline-button">VARAA AIKA</a>
+                <a href="../customers/reservation.html" class="btn btn-block btn-sm custom-outline-button">VARAA AIKA</a>
             </div>
             </div>
         </div>
@@ -43,7 +43,7 @@ HIUSMAGIA parturi kampaamo
             <div class="card-body">
                 <h5 class="card-title">Jared Padalecki</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nec lectus risus. A sem a nisl feugiat fringilla et eu eros.</p>
-                <a href="../forms/login.php" class="btn btn-block btn-sm custom-outline-button">VARAA AIKA</a>
+                <a href="../customers/reservation.html" class="btn btn-block btn-sm custom-outline-button">VARAA AIKA</a>
             </div>
             </div>
         </div>
@@ -58,7 +58,7 @@ HIUSMAGIA parturi kampaamo
             <div class="card-body">
                 <h5 class="card-title">Kit Harington</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nec lectus risus. A sem a nisl feugiat fringilla et eu eros.</p>
-                <a href="../forms/login.php" class="btn btn-block btn-sm custom-outline-button">VARAA AIKA</a>
+                <a href="../customers/reservation.html" class="btn btn-block btn-sm custom-outline-button">VARAA AIKA</a>
             </div>
             </div>
         </div>
@@ -68,7 +68,7 @@ HIUSMAGIA parturi kampaamo
             <div class="card-body">
                 <h5 class="card-title">Lucy Liu</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nec lectus risus. A sem a nisl feugiat fringilla et eu eros.</p>
-                <a href="../forms/login.php" class="btn btn-block btn-sm custom-outline-button">VARAA AIKA</a>
+                <a href="../customers/reservation.html" class="btn btn-block btn-sm custom-outline-button">VARAA AIKA</a>
             </div>
             </div>
         </div>
@@ -78,7 +78,7 @@ HIUSMAGIA parturi kampaamo
             <div class="card-body">
                 <h5 class="card-title">Eva Longoria</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nec lectus risus. A sem a nisl feugiat fringilla et eu eros.</p>
-                <a href="../forms/login.php" class="btn btn-block btn-sm custom-outline-button">VARAA AIKA</a>
+                <a href="../customers/reservation.html" class="btn btn-block btn-sm custom-outline-button">VARAA AIKA</a>
             </div>
             </div>
         </div>
@@ -88,7 +88,7 @@ HIUSMAGIA parturi kampaamo
             <div class="card-body">
                 <h5 class="card-title">Nikolaj Coster-Waldau</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nec lectus risus. A sem a nisl feugiat fringilla et eu eros.</p>
-                <a href="../forms/login.php" class="btn btn-block btn-sm custom-outline-button">VARAA AIKA</a>
+                <a href="../customers/reservation.html" class="btn btn-block btn-sm custom-outline-button">VARAA AIKA</a>
             </div>
             </div>
         </div>
