--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -96,7 +96,7 @@ if (isset($_COOKIE['user_id'])) {
             
 
             <a  
-                href="" 
+                href="{{ url_for('main.client_page') }}" 
                 class="nav-item nav-link"><i class="bi bi-person-circle" style="font-size:18px; color:lightgreen;"></i>
             </a>
 
