--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -2,16 +2,12 @@
 <?php
 require(__DIR__ . '/forms/db_connection.php');
 $env = parse_ini_file('.env');
-
 $page = $_SERVER['PHP_SELF'];
 $end = substr($page, strrpos($page, "/") + 1);
 $address = substr($end, 0, strpos($end, "."));
-
 $active = "class=\"nav-link active\" ";
 $full = "class=\"custom-cart-full\" ";
-
 session_start();
-
 if (isset($_COOKIE['user_id'])) {
   $user_id = $_COOKIE['user_id'];
   $query = " SELECT * FROM users LEFT JOIN users_tokens ON users.id=users_tokens.user_id  WHERE users.id='$user_id'";
@@ -45,14 +41,15 @@ if (isset($_COOKIE['user_id'])) {
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">  
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../static/custom.css">
-    <!-- PYTHON: <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='custom.css')}}" /> -->
+    <!-- <link rel="stylesheet" href="../static/custom.css"> -->
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='custom.css')}}" />
     
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script> 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="/js/date.js"></script> 
+    <!-- <script src="/js/date.js"></script> -->
+    <script src="{{ url_for('static', filename='/js/date.js') }}"></script>
     <link rel="icon" type="image/x-icon" href="/<?= $env['app_dir'] ?>/favicon.ico">
     
   </head>
@@ -63,8 +60,7 @@ if (isset($_COOKIE['user_id'])) {
       <!-- NAVIGATION STARTS -->
     
       <nav class="navbar navbar-expand-md fixed-top navbar-dark custom-navbar-color"> 
-        <div id="logo">
-      <!--PYTHON:   <h1><a href="/<?= $env['app_dir'] ?>/index.html"><span>HIUSMAGIA</span></a></h1>-->
+        <div id="logo">      
          <h1><a href="{{ url_for('main.index') }}"><span>HIUSMAGIA</span></a></h1>      
         </div>
       
@@ -115,7 +111,7 @@ if (isset($_COOKIE['user_id'])) {
             ?>
 
             <a  
-                href="{{ url_for('auth.logout') }}" 
+                href="" 
                 class="nav-item nav-link">Kirjaudu ulos
             </a>
             
@@ -127,8 +123,8 @@ if (isset($_COOKIE['user_id'])) {
                   href="{{ url_for('auth.login') }}" 
                   class="nav-item nav-link"><i class="bi bi-person-circle" style="font-size:18px;"></i>
               </a>
-            <?php
-            } ?>
+            <!-- <?php
+            } ?> -->
           </div>
         </div>
       </nav>
@@ -138,7 +134,7 @@ if (isset($_COOKIE['user_id'])) {
     
       <div class="container-fluid custom-margin-container">
         {% block alert_content %}
-       <!-- <div class="container">-->
+          <!-- <div class="container">-->
           {% for message in get_flashed_messages() %}
           <div class="alert alert-warning">
           <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -153,7 +149,7 @@ if (isset($_COOKIE['user_id'])) {
         </div>       
       </div>
 
-    <!-- CONTENT ENDS -->
+      <!-- CONTENT ENDS -->
    
     <!-- FOOTER STARTS -->
     <footer class="custom-footer">
