navigation, client name, login form

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -7,18 +7,27 @@
 <div class="custom-margin-for-form">
     <!--Row starts-->
     <div class="row">
-        <div class="col-lg-4">        
+        <div class="col-lg-2">        
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-lg-8">
+            <div class="custom-form">
             <h2>KIRJAUDU</h2>
-            {{ wtf.quick_form(form) }} 
+            {{ wtf.quick_form(form) }}            
+           
+            <!-- {{ wtf.form_field(form.email) }}
+            {{ wtf.form_field(form.password) }} 
+            {{ wtf.form_field(form.remember_me) }}
+            {{ form.submit(class='btn btn-lg btn-block custom-outline-button') }} --> 
+            <!-- {{ form.email(class='form-control') }}-->           
+                              
             <br>
-            <p>Unohditko salasana? <a href="{{ url_for('auth.password_reset_request') }}">Click here to reset it</a>.</p>
-            <p>Uusi käyttäjä? <a href="{{ url_for('auth.register') }}">Click here to register</a>.</p>   
-        </div>
+            <p>Unohditko salasana? <a href="{{ url_for('auth.password_reset_request') }}">Vaihda salasana</a>.</p>
+            <p>Uusi käyttäjä? <a href="{{ url_for('auth.register') }}">Luo tili</a>.</p>
+            </div> 
+        </div>        
 
-        <div class="col-lg-4">        
+        <div class="col-lg-2">        
         </div>
     </div>
     <!--Row ends--> 
