--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -95,7 +95,7 @@ if (isset($_COOKIE['user_id'])) {
               </a>
               <div class="dropdown-menu"> 
                   <a href="{{ url_for('main.client_page') }}" class="dropdown-item">Minun aikatauluni</a>
-                  <a href="{{ url_for('main.client_page') }}" class="dropdown-item">Varaa aika</a>                 
+                  <a href="{{ url_for('main.reservation') }}" class="dropdown-item">Varaa aika</a>                 
                   <a href="{{ url_for('auth.change_password') }}" class="dropdown-item">Vaihda salasana</a>
                   <a href="{{ url_for('auth.change_email_request') }}" class="dropdown-item">Vaihda sähköposti</a>                  
               </div>
